--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 main{
-    margin:53px auto;
+    margin: 53px auto;
     width: 65vw;
-    height: 70vh;
+    height: 85vh;
 }
 canvas{
-    background-color: aquamarine;
-    width: 100%;
-    height: 100%
+    background-color: aquamarine; 
+     width: 100%;
+    height: 100%;
 }
