--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
+/* body{
+    display:block;
+} */
 main{
-    margin: 53px auto;
+    margin: 0 auto;
     width: 65vw;
     height: 85vh;
+    text-align: center;
+}
+#menuPage{
+text-align: center;
+display: block;
+}
+button{
+    margin: 1vw;
 }
 canvas{
-    background-color: aquamarine; 
      width: 100%;
     height: 100%;
 }
+
+
