--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-/* body{
-    display:block;
-} */
+body{
+    background-color: beige;
+}
 main{
     margin: 0 auto;
     width: 65vw;
@@ -17,6 +17,16 @@ button{
 canvas{
      width: 100%;
     height: 100%;
+}
+#message{
+    width: 30vw;
+    height: auto;
+    background-color: aliceblue;
+    margin: 20px;
+    padding: 10px;
+    font-size: 30px;
+    
+
 }
 
 
